--- a/releases/play2-auth_2.9.1/0.1/ivys/ivy.xml
+++ b/releases/play2-auth_2.9.1/0.1/ivys/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
-	<info organisation="play2-auth" module="play2-auth_2.9.1" revision="0.1" status="release" publication="20130204102846">
+	<info organisation="com.sdc" module="play2-auth_2.9.1" revision="0.1" status="release" publication="20130204110705">
 		<description>
 		play2-auth
 		</description>
