--- a/releases/play2-scala-auth_2.9.1/0.1/ivys/ivy.xml
+++ b/releases/play2-scala-auth_2.9.1/0.1/ivys/ivy.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
-	<info organisation="com.sdc" module="play2-auth_2.9.1" revision="0.1" status="release" publication="20130204111619">
+	<info organisation="com.sdc" module="play2-scala-auth_2.9.1" revision="0.1" status="release" publication="20130205145431">
 		<description>
-		play2-auth
+		play2-scala-auth
 		</description>
 	</info>
 	<configurations>
@@ -20,10 +20,10 @@
 		<conf name="pom" visibility="public" description=""/>
 	</configurations>
 	<publications>
-		<artifact name="play2-auth_2.9.1" type="pom" ext="pom" conf="pom"/>
-		<artifact name="play2-auth_2.9.1" type="jar" ext="jar" conf="compile"/>
-		<artifact name="play2-auth_2.9.1" type="src" ext="jar" conf="sources" e:classifier="sources"/>
-		<artifact name="play2-auth_2.9.1" type="doc" ext="jar" conf="docs" e:classifier="javadoc"/>
+		<artifact name="play2-scala-auth_2.9.1" type="pom" ext="pom" conf="pom"/>
+		<artifact name="play2-scala-auth_2.9.1" type="jar" ext="jar" conf="compile"/>
+		<artifact name="play2-scala-auth_2.9.1" type="src" ext="jar" conf="sources" e:classifier="sources"/>
+		<artifact name="play2-scala-auth_2.9.1" type="doc" ext="jar" conf="docs" e:classifier="javadoc"/>
 	</publications>
 	<dependencies>
 		<dependency org="org.scala-lang" name="scala-library" rev="2.9.1" conf="compile->default(compile)"/>
